<resources>
    <string name="app_name">Calc</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="divide">÷</string>
    <string name="mult">×</string>
    <string name="backspace">\u232b</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="comma">.</string>
    <string name="sinus">sin</string>
    <string name="cosinus">cos</string>
    <string name="tangens">tan</string>
    <string name="logNat">ln</string>
    <string name="log10">log</string>
    <string name="square2">√</string>
    <string name="power2">x²</string>
    <string name="powerY">xʸ</string>
    <string name="percent">%</string>
    <string name="rightBracket">)</string>
    <string name="result">0</string>
    <string name="SimpleCalc">Simple Calc</string>
    <string name="AdvancedCalc">Advanced Calc</string>
    <string name="About">About</string>
    <string name="AboutDescrpition">First exercise University Project for subject Mobile Applications. \n \nSimple calculator and advanced calculator implementation with help of exp4j library.\n\n\n\nJasiński Damian</string>
    <string name="MainMenu"> My calculator </string>

</resources>