<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="#2C363A"
    tools:context=".MainMenuActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#262F33"
      android:minHeight="?attr/actionBarSize"
      android:textAlignment="center"

      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      tools:layout_editor_absoluteX="109dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/MainMenu"
        android:textAlignment="center"
        android:textColor="#E3D7D7"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="14dp" />

  </androidx.appcompat.widget.Toolbar>

  <Button
      android:id="@+id/simpleCalcBtn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:width="220dp"
      android:backgroundTint="#374955"
      android:fontFamily="sans-serif-medium"
      android:onClick="openSimpleCalcBtn"
      android:text="@string/SimpleCalc"
      android:textColor="#FFFFFF"
      android:textSize="@dimen/btnFontSize"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.38" />

  <Button
      android:id="@+id/button2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:width="220dp"
      android:backgroundTint="#374955"
      android:fontFamily="sans-serif-medium"
      android:onClick="openAdvancedCalc"
      android:text="@string/AdvancedCalc"
      android:textColor="#FFFFFF"
      android:textSize="@dimen/btnFontSize"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.48000002" />

  <Button
      android:id="@+id/button3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:width="220dp"
      android:backgroundTint="#374955"
      android:fontFamily="sans-serif-medium"
      android:onClick="openAboutBtn"
      android:text="@string/About"
      android:textColor="#FFFFFF"
      android:textSize="@dimen/btnFontSize"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.58000004" />
</androidx.constraintlayout.widget.ConstraintLayout>